update docker config and rabbitMQ config